<resources>
    <string name="app_name">Fatlytics</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="select">Select</string>
    <string name="confirm">Confirm</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="daily_activeness">Daily Activeness</string>
    <string-array name="daily_activeness">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Not Active</item>
    </string-array>
    <string name="diseases">Diseases</string>
    <string-array name="diseases">
        <item>Diabetes</item>
        <item>Obesity</item>
        <item>Heart Disease</item>
    </string-array>
    <string name="complete_registration">Complete Registration</string>

    <string name="home">Home</string>
    <string name="diary">Diary</string>
    <string name="profile">Profile</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="other">Snacks</string>
    <string name="add_food">Add Food</string>
    <string name="total">Total</string>
    <string name="cal">%s cal</string>
    <string name="search_food">Search food…</string>
    <string name="change">Change</string>
    <string name="food">Food: %s</string>
    <string name="serving">Serving: %s %s</string>

    <!--Error Messages-->
    <string name="error">Hata!</string>
    <string name="unexpected_error_message">An unexpected error occurred!</string>
    <string name="account_banned_error_message">Your account has been banned!</string>
    <string name="username_already_taken_error_message">Username was already taken!</string>
</resources>
