<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:label="@string/home"
        android:name="com.fatlytics.app.ui.main.home.HomeFragment"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/diaryFragment"
        android:label="@string/diary"
        android:name="com.fatlytics.app.ui.main.diary.DiaryFragment"
        tools:layout="@layout/diary_fragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:label="@string/profile"
        android:name="com.fatlytics.app.ui.main.profile.ProfileFragment"
        tools:layout="@layout/profile_fragment" />
</navigation>