<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".ui.main.MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/height"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                        android:id="@+id/height_input_edit_text"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:maxLength="3"
                        android:textAlignment="viewEnd" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:text="@string/cm" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/weight"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                        android:id="@+id/weight_input_edit_text"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:maxLength="3"
                        android:textAlignment="viewEnd" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:text="@string/kg" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/daily_activeness"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                    android:id="@+id/daily_activeness_input_edit_text"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/diseases"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                    android:id="@+id/diseases_input_edit_text"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/complete_registration_button"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:text="@string/complete_registration" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</layout>