<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addfood.AddFoodActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:id="@+id/food_name"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="?attr/colorPrimary"
                    tools:text="Coffee" />

                <View
                    android:background="?android:attr/listDivider"
                    android:layout_height="1dp"
                    android:layout_width="match_parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:id="@+id/food_serving"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_width="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/serving_change_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/serving" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:id="@+id/serving_change_button"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_width="wrap_content"
                        android:text="@string/change"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:background="?android:attr/listDivider"
                    android:layout_height="1dp"
                    android:layout_width="match_parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/food_detail_recycler"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_food_detail" />

                <View
                    android:layout_height="80dp"
                    android:layout_width="match_parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/add_food_button"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:padding="8dp"
            android:text="@string/add_food"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>